[gd_scene load_steps=6 format=2]

[ext_resource path="res://launch/AlienShip.gd" type="Script" id=1]
[ext_resource path="res://launch/alien-ship.png" type="Texture" id=2]
[ext_resource path="res://sounds/alien-alert.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/alient-shoot.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "jet"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("alien-ship:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="alien-ship" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
hframes = 4
frame = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 2.44446, -4.21842, 11.1021, -1.5129, 18.6776, 3.89814, 0.00948715, 7.14476, -16.7647, 7.41532, -17.3058, -2.86566, -9.45983, -5.30063 )

[node name="MissileTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="MissileSpawn" type="Position2D" parent="."]
position = Vector2( 31.384, 2.43497 )

[node name="StunTimer" type="Timer" parent="." groups=[
"alien-fighter",
]]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/jet = SubResource( 1 )

[node name="AlertAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "Sound Effects"

[node name="ShootAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0
attenuation = 1.7411
bus = "Sound Effects"
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
